<resources>
    <string name="app_name">DormChoose</string>
    <string name="login_username">学号</string>
    <string name="login_password">密码</string>
    <string name="login_submit">登录</string>
    <string name="login_sspku">©北京大学软件与微电子学院</string>
    <string name="info_name">姓名</string>
    <string name="info_studentid">学号</string>
    <string name="info_gender">性别</string>
    <string name="info_grade">年级</string>
    <string name="info_location">校区</string>
    <string name="info_vcode">验证码</string>
    <string name="info_building">楼号</string>
    <string name="info_room">房间号</string>
    <string name="info_submit">确认无误，进入选宿</string>
    <string name="info_exit">退出</string>

    <string name="remain_5">05号楼剩余空床数</string>
    <string name="remain_13">13号楼剩余空床数</string>
    <string name="remain_14">14号楼剩余空床数</string>
    <string name="remain_8">08号楼剩余空床数</string>
    <string name="remain_9">09号楼剩余空床数</string>
    <string name="building_choose">请选择楼号</string>
    <string name="radio_personal">个人办理</string>
    <string name="radio_collective">集体办理</string>
    <string name="btn_submit">提交</string>
    <string name="btn_back">返回</string>

    <string name="resident_stu1id">同住人1学号</string>
    <string name="resident_v1code">同住人1校验码</string>
    <string name="resident_stu2id">同住人2学号</string>
    <string name="resident_v2code">同住人2校验码</string>
    <string name="resident_stu3id">同住人3学号</string>
    <string name="resident_v3code">同住人3校验码</string>
    <string name="resident_add"> </string>
    <string name="resident_remove"> </string>


</resources>

